final improvements in ui

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     </div>
     <div class="personal-projects-container">
       <h3>More projects comming soon...</h3>
-      <a href="https://github.com/pab-mchn" target="_blank" ><img class="personal-project-icon"src="media/social/github.png" alt="github-icon" /></a>
+      <a href="https://github.com/pab-mchn" target="_blank" ><img class="personal-project-icon"src="media/social/github-logo_white.png" alt="github-icon" /></a>
     </div>
 
     <!--contact-->
@@ -158,11 +158,11 @@
 
     <!--footer-->
     <footer>
-      <p>Web Developer & Content Creator</p>
+      <p class="footer-text">Let's connect</p>
       <p>
-        <a href="https://www.youtube.com/channel/UCrP5xPLzqW3k6ssG8C7lHVw" target="_blank" ><img class="footer-img footer-youtube" src="media/social/youtube.png" alt="footer-youtube" /></a>
-        <a href="https://github.com/pab-mchn" target="_blank" ><img class="footer-img left" src="media/social/github.png" alt="footer-github" /></a>
-        <a href="#contact"><img class="footer-img footer-email left" src="media/social/email_envelop.png" alt="footer-email" /></a>
+        <a href="https://www.youtube.com/channel/UCrP5xPLzqW3k6ssG8C7lHVw" target="_blank" ><img class="footer-img left" src="media/social/youtube_circle_white.png" alt="footer-youtube" /></a>
+        <a href="#contact"><img class="footer-img left" src="media/social/email_white.png" alt="footer-email" /></a>
+        <a href="https://github.com/pab-mchn" target="_blank" ><img class="footer-img left" src="media/social/github-logo_white.png" alt="footer-github" /></a>
         
        
       </p>
