improving scrolling expierience

--- a/index.html
+++ b/index.html
@@ -41,9 +41,7 @@
         </div>
         <ul class="nav-menu">
           <li>
-            <a href="#about&skills" class="nav-links"
-              >ABOUT&SKILLS</a
-            >
+            <a href="#about_skills" class="nav-links scrollLink">ABOUT&SKILLS</a>
           </li>
           <li>
             <a href="https://www.youtube.com/channel/UCrP5xPLzqW3k6ssG8C7lHVw" target="_blank" class="nav-links"
@@ -54,9 +52,9 @@
             <a href="https://github.com/pab-mchn" target="_blank" class="nav-links">GITHUB</a>
           </li>
           <li>
-            <a href="#projects" class="nav-links">PROJECTS</a>
+            <a href="#projects" class="nav-links scrollLink">PROJECTS</a>
           </li>
-          <li><a class="nav-links" href="#contact">CONTACT</a></li>
+          <li><a href="#contact" class="nav-links scrollLink" >CONTACT</a></li>
         </ul>
       </nav>
     </div>
@@ -78,7 +76,7 @@
     </div>
 
     <!--About Me-->
-    <div id="about&skills"></div>
+    <div id="about_skills"></div>
     <div class="about-section-container" data-aos="fade-up">
       <div class="about-section-img-container">
       <img class="about-section-img" src="media/general/image-profile.png" alt="profile" />
@@ -176,6 +174,7 @@
     <script src="./js/appParticles.js"></script>
     <script src="./js/projects.js"></script>
     <script src="./js/app.js"></script>
+    <script src="./js/scoll.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
