added efect in h1

--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
 
     <!--contact-->
     <span id="contact"><!--navegation link--></span>
-    <div class="contact-section-container">
+    <div class="contact-section-container" >
     <form id="form" data-aos="fade-up">
-      <h1 class="contact-section-title">CONTACT</h1>
+      <h1 class="contact-section-title" data-aos="fade-up">CONTACT</h1>
       <div class="field">
         <label for="user_name">Name</label>
         <input type="text" name="user_name" id="user_name">
