scrolling section effects

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!--nav - responsive menu-->
     <div class="nav-container">
       <nav class="navbar">
-        <h1 id="navbar-logo">PORTFOLIO.</h1>
+       <h1 id="navbar-logo">PORTFOLIO.</h1>
         <div class="menu-toggle active" id="mobile-menu">
           <span class="bar"></span>
           <span class="bar"></span>
@@ -63,14 +63,14 @@
     <img id="astronaut-fly" src="media/general/space-guy.gif" />
 
     <!--Main section-->
-    <div class="main-section-container">
+    <div class="main-section-container" data-aos="fade-up" id="main-section" >
       <div class="main-section-text-container">
         <h1>Hi!</h1>
         <h1>I'm Pablo</h1>
         <h1></h1>
         <h2>Web Developer & content Creator</h2>
         <div class="main-section-contact-button">
-          <a class="btn btn-gradient" href="#contact">Contact Me</a>
+          <a class="btn btn-gradient scrollLink" href="#contact">Contact Me</a>
         </div>
       </div>
     </div>
@@ -135,7 +135,7 @@
     <span id="contact"><!--navegation link--></span>
     <div class="contact-section-container" >
     <form id="form" data-aos="fade-up">
-      <h1 class="contact-section-title" data-aos="fade-up">CONTACT</h1>
+      <h1 class="contact-section-title" data-aos="fade-up" >CONTACT</h1>
       <div class="field">
         <label for="user_name">Name</label>
         <input type="text" name="user_name" id="user_name">
@@ -162,7 +162,7 @@
       <p class="footer-text">Let's connect</p>
       <p>
         <a href="https://www.youtube.com/channel/UCrP5xPLzqW3k6ssG8C7lHVw" target="_blank" ><img class="footer-img left" src="media/social/youtube_circle_white.png" alt="footer-youtube" /></a>
-        <a href="#contact"><img class="footer-img left" src="media/social/email_white.png" alt="footer-email" /></a>
+        <a href="#contact" class="scrollLink"><img class="footer-img left" src="media/social/email_white.png" alt="footer-email" /></a>
         <a href="https://github.com/pab-mchn" target="_blank" ><img class="footer-img left" src="media/social/github-logo_white.png" alt="footer-github" /></a>
         
        
