metadata in html file

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </script>
     <script src="https://kit.fontawesome.com/ee3d08c0a8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <title>Pab Mchn.</title>
+    <title>Portfolio.</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
