final functionality in contact form

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
   
   <script type="text/javascript">
-    emailjs.init('gCBjK_qQC8VIA3mqk')
+    emailjs.init('YH89_WWIIkPo-FMbe')
   </script>
     <script src="https://kit.fontawesome.com/ee3d08c0a8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -127,7 +127,7 @@
       <ul class="projects-list-container" id="projects-list-container"></ul>
     </div>
     <div class="personal-projects-container">
-      <h3>More projects comming soon...</h3>
+      <h3>More code and projects on my github</h3>
       <a href="https://github.com/pab-mchn" target="_blank" ><img class="personal-project-icon"src="media/social/github-logo_white.png" alt="github-icon" /></a>
     </div>
   </div>
