--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
             >
           </li>
           <li>
+            <a href="https://medium.com/@onthecodenow" target="_blank" class="nav-links"
+              >BLOG</a
+            >
+          </li>
+          <li>
             <a href="https://github.com/pab-mchn" target="_blank" class="nav-links">GITHUB</a>
           </li>
           <li>
