--- a/index.html
+++ b/index.html
@@ -66,14 +66,13 @@
     </div>
     <div id="particles-js"></div>
 
-    <img id="astronaut-fly" src="media/general/space-guy.gif" />
+    <!-- <img id="astronaut-fly" src="media/general/space-guy.gif" /> -->
 
     <!--Main section-->
     <div class="main-section-container" data-aos="fade-up" id="main-section" >
       <div class="main-section-text-container">
         <h1>Hi!</h1>
         <h1>I'm Pablo</h1>
-        <h1></h1>
         <h2>Web Developer & content Creator</h2>
         <div class="main-section-contact-button">
           <a class="btn btn-gradient scrollLink" href="#contact">Contact Me</a>
@@ -118,13 +117,13 @@
     <span id="projects"><!--id for navgaiton link--></span>
     <div data-aos="fade-up">
     <h1 class="projects-section-title" >SOME PROJECTS & EXPERIENCES</h1>
-    <div class="main-projects-section-container" id="main-projects-section-container">
+    <!-- <div class="main-projects-section-container" id="main-projects-section-container">
       <ul class="main-projects-list-item" id="main-projects-list-container"></ul>
-    </div>
+    </div> -->
 
     <div class="projects-section-navegation-container">
       <i class="fa-solid fa-angle-left" id="navegation-arrow-left"></i>
-      <h2>TEAM PROJECTS</h2>
+      <!-- <h2>TEAM PROJECTS</h2> -->
       <i class="fa-solid fa-angle-right" id="navegation-arrow-right"></i>
     </div>
 
